--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "license": "ISC",
     "type": "module",
     "dependencies": {},
-    "devDependencies": {},
+    "devDependencies": {
+        "chance": "^1.1.8",
+        "randomstring": "^1.2.1"
+    },
     "scripts": {}
 }
