--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "license": "ISC",
     "type": "module",
     "dependencies": {},
-    "devDependencies": {},
+    "devDependencies": {
+        "chai": "^4.3.4",
+        "chance": "^1.1.8",
+        "mocha": "^9.1.3"
+    },
     "scripts": {}
 }
