--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-    "name": "app",
-    "version": "1.0.0",
-    "description": "demo",
-    "author": "Horozheieve V.V.",
-    "license": "ISC",
-    "type": "module",
-    "dependencies": {},
-    "devDependencies": {
-        "chai": "^4.3.4",
-        "chance": "^1.1.8",
-        "mocha": "^9.1.3"
-    },
-    "scripts": {}
+  "name": "app",
+  "version": "1.0.0",
+  "description": "demo",
+  "author": "Horozheieve V.V.",
+  "license": "ISC",
+  "type": "module",
+  "dependencies": {},
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chance": "^1.1.8",
+    "mocha": "^9.1.3"
+  },
+  "scripts": {
+    "test": "mocha"
+  }
 }
